# 3D-Viewer

./: Doxyfile  Makefile  README.md  README_RUS.md  main.h  rotate.c  s21_tests.c
Back/: main.h  rotate.c
QT_3D/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
